syntax = "proto3";

package captcha;

service CaptchaService {
  rpc getCaptcha(CaptchaArgs) returns (Captcha);
  rpc getData(CaptchaArgs) returns (TestData);
}

message TestData {
  string fact = 1;
  int32 length = 2;
}

message CaptchaArgs {}

message Captcha {
  string image = 1;
  string answer = 2;
}